attempting to fix viewport on mobile

--- a/portfolio/static/styles/main.scss
+++ b/portfolio/static/styles/main.scss
@@ -33,6 +33,7 @@ h1, h2, h3, h4, h5, h6, p {
 
 .splash-section {
     height: 100vh;
+    min-height: -webkit-fill-available;
     font-family: "WorkSans";
 
     h1 {
